--- a/NoSTORE/wwwroot/css/layout.css
+++ b/NoSTORE/wwwroot/css/layout.css
@@ -120,6 +120,47 @@
   opacity: 0.5;
 }
 
+#profile-modal {
+  display: none;
+  overflow: visible;
+  position: absolute;
+  right: 0%;
+  opacity: 0;
+  background-color: white;
+  z-index: 1000;
+  padding: 1rem;
+  background-color: #3F3F46;
+  -webkit-box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
+  border-radius: 0.4rem;
+  transition: opacity 0.2s ease-out;
+}
+#profile-modal:hover {
+  display: block;
+  opacity: 1;
+}
+#profile-modal .p-modal_content div {
+  margin-top: 0.3rem;
+  display: flex;
+}
+#profile-modal .p-modal_content div a {
+  color: #E0E0E0;
+}
+#profile-modal .p-modal_content div:hover a {
+  color: #66A7C8;
+}
+#profile-modal .p-modal_content .p-modal_logout {
+  margin-top: 1rem;
+}
+#profile-modal .p-modal_content .p-modal_logout button {
+  padding: 0.2rem;
+  border-radius: 0.2rem;
+  color: #26262B;
+  background-color: #66A7C8;
+  width: 100%;
+}
+
 header {
   top: 0;
   margin: 0;
@@ -204,6 +245,20 @@ header nav .buttons {
   display: flex;
   justify-content: center;
   gap: 2rem;
+}
+header nav .buttons .profile-mini_avatar {
+  width: 36px;
+  height: 36px;
+  border-radius: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+header nav .buttons .profile-mini_avatar img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
 }
 header nav .buttons a, header nav .buttons button {
   font-family: "Strong", sans-serif;
