--- a/NoSTORE/wwwroot/scss/details_product.scss
+++ b/NoSTORE/wwwroot/scss/details_product.scss
@@ -1,11 +1,217 @@
 ﻿@use 'variables';
 
+.additonal__info {
+    background-color: variables.$block-color;
+    border-radius: 10px;
+    padding: 1rem;
+
+    .top__info {
+        display: flex;
+        gap: 3rem;
+
+
+        .popular__compares {
+            position: -webkit-sticky;
+            position: sticky;
+            align-self: flex-start;
+            top: 8rem;
+            z-index: 100;
+            flex: 0 0 auto;
+            min-width: max-content;
+
+            h2 {
+                @include variables.font();
+                font-size: 2.6rem;
+                color: variables.$accent-color;
+            }
+
+            .mini__product {
+                display: flex;
+                gap: 1rem;
+                background-color: variables.$bg-color;
+                padding: 0.5rem;
+                border-radius: 0.6rem;
+                margin-bottom: 1.5rem;
+                transition: background-color 0.2s ease;
+
+                &:hover {
+                    background-color: lighten(variables.$bg-color, 2%);
+                }
+
+                img {
+                    width: 10vh
+                }
+
+                .mini__info {
+                    h3 {
+                        display: -webkit-box;
+                        max-width: 240px;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        @include variables.font();
+                        font-size: 1.3rem;
+                        color: variables.$text-color;
+                    }
+
+                    div {
+                        display: flex;
+                        justify-content: space-between;
+
+                        p {
+                            @include variables.font();
+                            font-size: 1.7rem;
+                            color: variables.$accent-color;
+                        }
+
+                        .mini__rating {
+                            display: flex;
+                            gap: 0.4rem;
+                            justify-content: center;
+                            align-items: center;
+
+                            img {
+                                width: 2rem;
+                                height: 100%;
+                            }
+
+                            span {
+                                @include variables.font();
+                                font-size: 1.7rem;
+                                color: variables.$accent-color;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .description {
+            display: flex;
+            justify-content: right;
+            flex-direction: column;
+            @include variables.font();
+            font-size: 1.4rem;
+            color: variables.$text-color;
+
+            .dsc {
+                &::after {
+                    margin-top: 1rem;
+                    margin-bottom: 1rem;
+                    content: '';
+                    display: block;
+                    width: 100%;
+                    height: 0.3rem;
+                    background-color: variables.$bg-color;
+                    border-radius: 5px;
+                    margin-top: 10px;
+                }
+            }
+
+            #specials {
+                position: relative;
+                max-height: 800px;
+                padding-bottom: 70px;
+                overflow: hidden;
+                transition: max-height 0.5s ease;
+
+                .specs-footer {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    padding: 10px 0;
+                    box-sizing: border-box;
+
+                    button {
+                        z-index: 10;
+                        padding: 0.7rem;
+                        width: 100%;
+                        font-size: 1.6rem;
+                        color: variables.$text-color;
+                        cursor: pointer;
+                        background-color: variables.$bg-color;
+                        border: none;
+                        border-radius: 5px;
+                        transition: color 0.2s ease;
+                        -webkit-box-shadow: 0px 0px 59px 62px rgba(63, 63, 70, 1);
+                        -moz-box-shadow: 0px 0px 59px 62px rgba(63, 63, 70, 1);
+                        box-shadow: 0px 0px 59px 62px rgba(63, 63, 70, 1);
+
+                        &:hover {
+                            color: variables.$additional-color;
+                        }
+
+                        &.active {
+                            -webkit-box-shadow: none;
+                            -moz-box-shadow: none;
+                            box-shadow: none;
+                        }
+                    }
+                }
+
+                h1 {
+                    font-size: 3rem;
+                    color: variables.$accent-color;
+                    margin-bottom: 1rem;
+                }
+
+                .specs__block {
+                    h2 {
+                        font-size: 2rem;
+                        color: variables.$accent-color;
+                        margin-bottom: 1rem;
+                    }
+
+                    .block__grid {
+                        display: grid;
+                        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); // адаптивно
+                        gap: 1.5rem; // одинаковые отступы между элементами
+                        margin-bottom: 2rem;
+
+                        .list__specs {
+                            display: flex;
+                            flex-direction: column;
+
+                            dt {
+                                font-size: 1.6rem;
+                                font-weight: normal;
+                            }
+
+                            dd {
+                                font-size: 1.5rem;
+                                color: variables.$additional-color;
+                            }
+                        }
+                    }
+
+                    &::after {
+                        margin-top: 1rem;
+                        margin-bottom: 1rem;
+                        content: '';
+                        display: block;
+                        width: 100%;
+                        height: 0.3rem;
+                        background-color: variables.$bg-color;
+                        border-radius: 5px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .main {
     background-color: variables.$block-color;
     border-radius: 10px;
     padding: 1rem;
     display: flex;
     gap: 2rem;
+    margin-bottom: 2rem;
 
     .images {
         height: 30rem;
@@ -15,10 +221,8 @@
         .images__slider {
             display: flex;
             flex-direction: column;
-            gap: 0.6rem;
 
             img {
-                width: 90px;
                 height: 90px;
             }
         }
@@ -56,7 +260,6 @@
 
         img {
             margin-top: 10px;
-            height: 100%;
             width: 120px;
         }
 
