--- a/NoSTORE/wwwroot/scss/layout.scss
+++ b/NoSTORE/wwwroot/scss/layout.scss
@@ -16,6 +16,7 @@
     align-items: center;
     opacity: 0;
     transition: opacity 0.2s ease-out;
+
     &.active {
         opacity: 1;
     }
@@ -136,7 +137,56 @@
     }
 }
 
+#profile-modal {
+    display: none;
+    overflow: visible;
+    position: absolute;
+    right: 0%;
+    opacity: 0;
+    background-color: white;
+    z-index: 1000;
+    padding: 1rem;
+    background-color: variables.$block-color;
+    -webkit-box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
+    border-radius: 0.4rem;
+    transition: opacity 0.2s ease-out;
 
+    &:hover {
+        display: block;
+        opacity: 1;
+    }
+
+    .p-modal_content {
+        div {
+            margin-top: 0.3rem;
+            display: flex;
+
+            a {
+                color: variables.$text-color;
+            }
+
+            &:hover {
+                a {
+                    color: variables.$additional-color;
+                }
+            }
+        }
+
+        .p-modal_logout {
+            margin-top: 1rem;
+
+            button {
+                padding: 0.2rem;
+                border-radius: 0.2rem;
+                color: variables.$bg-color;
+                background-color: variables.$additional-color;
+                width: 100%;
+            }
+        }
+    }
+}
 
 header {
     top: 0;
@@ -230,6 +280,22 @@ header {
             display: flex;
             justify-content: center;
             gap: 2rem;
+
+            .profile-mini_avatar {
+                width: 36px;
+                height: 36px;
+                border-radius: 100%;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                img {
+                    display: block;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
 
             a, button {
                 @include variables.font($size: 1.4rem);
